<resources>
    <string name="app_name">BinApp</string>
    <string name="bin_hint">Enter the first digits of a card number (BIN/IIN)</string>
    <string name="scheme_network">SCHEME / NETWORK</string>
    <string name="lonlat_template">(latitude: %s, longitude: %s)</string>
    <string name="error_input_bin">Invalid bin</string>
    <string name="type">TYPE</string>
    <string name="brand">BRAND</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="length">LENGTH</string>
    <string name="luhn">LUHN</string>
    <string name="prepaid">PREPAID</string>
    <string name="country">COUNTRY</string>
    <string name="bank">BANK</string>
    <string name="search">Search</string>
</resources>