<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_bin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/cv_bin_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_bin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bin_hint"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor = "#150734"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_bin"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_bin_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tvScheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="0dp"
                android:text="@string/scheme_network"
                android:textColor="#757575"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSchemeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvScheme"
                tools:text="Visa" />

            <TextView
                android:id="@+id/tvBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="0dp"
                android:text="@string/brand"
                android:textColor="#757575"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSchemeValue" />

            <TextView
                android:id="@+id/tvBrandValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBrand"
                tools:text="Visa / Dankort" />

            <TextView
                android:id="@+id/tvCardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="0dp"
                android:text="@string/card_number"
                android:textColor="#757575"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBrandValue" />

            <TextView
                android:id="@+id/tvLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="0dp"
                android:text="@string/length"
                android:textColor="#757575"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCardNumber" />

            <TextView
                android:id="@+id/tvLengthValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLength"
                tools:text="16" />

            <TextView
                android:id="@+id/tvLuhn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="0dp"
                android:text="@string/luhn"
                android:textColor="#757575"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/tvLength"
                app:layout_constraintTop_toBottomOf="@id/tvCardNumber" />

            <TextView
                android:id="@+id/tvLuhnValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tvLength"
                app:layout_constraintTop_toBottomOf="@+id/tvLuhn"
                tools:text="Yes / No" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/type"
                android:textColor="#757575"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/tvScheme"
                app:layout_constraintStart_toStartOf="@id/guideline_middle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTypeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@id/tvType"
                tools:text="Debit / Credit" />

            <TextView
                android:id="@+id/tvPrepaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prepaid"
                android:textColor="#757575"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@id/tvTypeValue" />

            <TextView
                android:id="@+id/tvPrepaidValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingBottom="8dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@id/tvPrepaid"
                tools:text="Yes / No" />

            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="#757575"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@id/tvPrepaidValue" />

            <TextView
                android:id="@+id/tvCountryValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvLuhn"
                app:layout_constraintStart_toStartOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@id/tvCountry"
                tools:text="🇩🇰 Denmark" />

            <TextView
                android:id="@+id/tvLongLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#757575"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@id/tvCountryValue"
                tools:text="(latitude: 56, longitude: 10)" />

            <TextView
                android:id="@+id/tvBank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/bank"
                android:textColor="#757575"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLengthValue" />

            <TextView
                android:id="@+id/tvBankValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBank"
                tools:text="Jyske Bank, Hjørring" />

            <TextView
                android:id="@+id/tvBankUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBankValue"
                tools:text="www.jyskebank.dk" />

            <TextView
                android:id="@+id/tvBankPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBankUrl"
                tools:text="+4589893300" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>